--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -9,5 +9,7 @@
     }
   ],
   "namespace": "",
-  "sfdcLoginUrl": "https://login.salesforce.com"
+  "sfdcLoginUrl": "https://login.salesforce.com",
+  "oauthLocalPort" : "1717",
+  "sourceApiVersion": "40.0"
 }
